<resources>
    <string name="app_name">Arastta</string>

    <string name="font">"fonts/DroidSans.ttf"</string>
    <string name="font_bold">"fonts/DroidSans-Bold.ttf"</string>

    <string name="please_wait">Please wait..</string>
    <string name="connection_failed">"Connection Failed. Please check your connection settings"</string>
    <string name="exit_toast">"Tap again on \"Back\" button to exit."</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="enable">Enabled</string>
    <string name="disable">Disabled</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="warning">Warning</string>

    <string name="delete_store">Are you sure you want to remove the store?</string>

    <string name="get_arastta_cloud">Try Arastta Cloud</string>

    <string name="new_store">New Store</string>
    <string name="StoreTitle">Store Title</string>
    <string name="storeUrl">Store URL</string>
    <string name="checkboxTitle1">Retrieve title automatically</string>
    <string name="checkboxTitle2">Use secure connection (TLS)</string>
    <string name="checkboxTitle3">Order created</string>
    <string name="checkboxTitle4">Order status changed</string>
    <string name="checkboxTitle5">New customer registered</string>
    <string name="checkboxTitle6">Show store name in order info</string>
    <string name="checkboxTitle7">Show product thumbnails</string>
    <string name="storeUrlTitle">Store URL (without http:// or https://)</string>
    <string name="UsernameTitle">API Username</string>
    <string name="PasswordTitle">API Password</string>
    <string name="NotTitle">Notification</string>
    <string name="ListTitle">List Settings</string>

    <string name="store_create_error">"Please enter the required information to complete."</string>

    <string name="order_status_complete">"Order status has been updated."</string>

    <string name="dashboard">Dashboard</string>
    <string name="orders">Orders</string>
    <string name="customers">Customers</string>
    <string name="products">Products</string>

    <string name="manage_stores">Manage Stores</string>
    <string name="app_settings">App Settings</string>

    <string name="add_store">Add Store..</string>

    <string name="today">Today</string>
    <string name="monthly">This Month</string>
    <string name="yearly">This Year</string>

    <string name="sales">Sales</string>
    <string name="product_info">Product Info</string>
    <string name="product_desc">Product Description</string>
    <string name="customer_total">Orders Total</string>
    <string name="info">Info</string>
    <string name="history">History</string>
    <string name="notify_customer">Notify Customer</string>
    <string name="notification">Notification</string>

    <string name="start_date">Starting Date</string>
    <string name="finish_date">End Date</string>
    <string name="date_range">Date Range</string>

    <string name="dashboard_details_1">Avg. order value / day:</string>
    <string name="dashboard_details_2">Avg. order / day:</string>
    <string name="dashboard_details_3">Avg. customers / day:</string>
    <string name="dashboard_details_4">Avg. order value / customer:</string>

    <string name="total">Total:</string>
    <string name="customer_id">Customer ID:</string>
    <string name="order_id">Order ID:</string>
    <string name="product_number">Products:</string>
    <string name="order_number">Orders:</string>
    <string name="model">Model:</string>
    <string name="id">ID:</string>
    <string name="quantity">Quantity:</string>
    <string name="price">Price:</string>
    <string name="sku">SKU:</string>
    <string name="status">Status:</string>
    <string name="manufacturer">Manufacturer:</string>
    <string name="fullname">Fullname:</string>
    <string name="ip">IP:</string>
    <string name="description">Description:</string>
    <string name="order_count">Order Count:</string>
    <string name="register_date">Register Date:</string>
    <string name="invoice_prefix">Invoice Prefix:</string>
    <string name="company">Company:</string>
    <string name="address">Address:</string>
    <string name="city">City:</string>
    <string name="country">Country:</string>
    <string name="email">E-mail:</string>
    <string name="phone">Phone:</string>
    <string name="fax">Fax:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="comment">Comment:</string>

    <string-array name="Periods">
        <item>Today</item>
        <item>This Week</item>
        <item>This Month</item>
        <item>This Quarter</item>
        <item>This Year</item>
    </string-array>

    <string name="done">Done</string>
    <string name="order_statuses">Order Statuses</string>
    <string name="widget_configure">Configure</string>
    <string name="widget_update">Update</string>
    <string name="widget_store_name">Store Name</string>
    <string name="widget_period">Period</string>
    <string name="widget_order_status">Order Status</string>
    <string name="widget_choose">Choose the order status</string>

</resources>