<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MenuLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
	android:orientation="vertical">

	<RelativeLayout
		android:id="@+id/AvatarArea"
		android:layout_width="match_parent"
		android:layout_height="120dp"
		android:background="@android:color/white">

		<ImageView
			android:id="@+id/Avatar"
			android:layout_width="80dp"
			android:layout_height="80dp"
			android:layout_centerInParent="true"
			android:scaleType="center"
			android:padding="2dp"
			android:background="@drawable/avatar_bg"/>

	</RelativeLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/AvatarArea"
		android:layout_above="@+id/MenuBottom">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/colorBg"
				android:orientation="vertical">

				<RelativeLayout
					android:id="@+id/MenuStoreButton"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:padding="16dp">

					<ImageView
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_alignParentRight="true"
						android:layout_centerVertical="true"
						android:background="@drawable/menu_store"/>

					<TextView
						android:id="@+id/MenuStoreTitle"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:gravity="center_vertical"
						android:textColor="@color/colorPrimary"
						android:textSize="15dp"
						android:text="@string/StoreTitle"/>

					<TextView
						android:id="@+id/MenuStoreURL"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_below="@+id/MenuStoreTitle"
						android:gravity="center_vertical"
						android:textColor="@color/colorPrimary"
						android:textSize="12dp"
						android:text="@string/storeUrl"/>

				</RelativeLayout>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/colorDivider"/>

				<ListView
					android:id="@+id/MenuStoreLv"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/Tabs"
					android:layout_above="@+id/Bottom"
					android:background="@color/colorBg"
					android:animationCache="false"
					android:scrollingCache="false"
					android:scrollbars="none"
					android:fadingEdgeLength="0dp"
					android:dividerHeight="1dp"
					android:divider="@color/colorDivider"
					android:visibility="gone"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/colorDivider"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="8dp"
					android:background="@android:color/white"/>

				<TextView
					android:id="@+id/MenuButtonDashboard"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableLeft="@drawable/menu_dashboard"
					android:gravity="center_vertical"
					android:textColor="@color/colorText"
					android:textSize="12dp"
					android:text="@string/dashboard"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/colorDivider"
					android:layout_marginLeft="8dp"
					android:layout_marginRight="8dp"/>

				<TextView
					android:id="@+id/MenuButtonOrders"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableLeft="@drawable/menu_orders"
					android:gravity="center_vertical"
					android:textColor="@color/colorText"
					android:textSize="12dp"
					android:text="@string/orders"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/colorDivider"
					android:layout_marginLeft="8dp"
					android:layout_marginRight="8dp"/>

				<TextView
					android:id="@+id/MenuButtonCustomers"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableLeft="@drawable/menu_customers"
					android:gravity="center_vertical"
					android:textColor="@color/colorText"
					android:textSize="12dp"
					android:text="@string/customers"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/colorDivider"
					android:layout_marginLeft="8dp"
					android:layout_marginRight="8dp"/>

				<TextView
					android:id="@+id/MenuButtonProducts"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:drawableLeft="@drawable/menu_products"
					android:gravity="center_vertical"
					android:textColor="@color/colorText"
					android:textSize="12dp"
					android:text="@string/products"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="1dp"
					android:background="@color/colorDivider"/>

			</LinearLayout>

			<ImageView
				android:id="@+id/MenuShadow"
				android:layout_width="4dp"
				android:layout_height="match_parent"
				android:layout_alignParentRight="true"
				android:scaleType="fitXY"
				android:background="@drawable/menu_shadow" />

		</RelativeLayout>

	</ScrollView>

	<LinearLayout
		android:id="@+id/MenuBottom"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:background="@color/colorBg"
		android:orientation="vertical">

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="1dp"
			android:background="@color/colorDivider"/>

		<TextView
			android:id="@+id/MenuButtonAppSettings"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:drawableLeft="@drawable/menu_settings"
			android:gravity="center_vertical"
			android:textColor="@color/colorText"
			android:textSize="15dp"
			android:text="@string/app_settings"/>

		<TextView
			android:id="@+id/MenuButtonManageStores"
			android:layout_width="match_parent"
			android:layout_height="48dp"
			android:drawableLeft="@drawable/menu_stores"
			android:gravity="center_vertical"
			android:textColor="@color/colorText"
			android:textSize="15dp"
			android:text="@string/manage_stores"
			android:visibility="gone"/>

	</LinearLayout>

</RelativeLayout>